--- a/example.env
+++ b/example.env
@@ -1,3 +1,11 @@
+# either openai or azure, lowercase
+API_TYPE = "openai"
+
+# openai params
+OPENAI_API_KEY = ""
+OPENAI_MODEL = "gpt-3.5-turbo"
+
+# azure params
 AZURE_OPENAI_ENDPOINT=""
 AZURE_OPENAI_KEY=""
 AZURE_OPENAI_API_VERSION=""
