--- a/example.env
+++ b/example.env
@@ -1,12 +1,26 @@
 # either openai or azure, lowercase
-API_TYPE = "openai"
+API_TYPE = "azure"
 
 # openai params
 OPENAI_API_KEY = ""
-OPENAI_MODEL = "gpt-3.5-turbo"
+OPENAI_MODEL = ""
 
 # azure params
-AZURE_OPENAI_ENDPOINT=""
-AZURE_OPENAI_KEY=""
-AZURE_OPENAI_API_VERSION=""
-AZURE_OPENAI_CHATGPT_DEPLOYMENT=""
+AZURE_OPENAI_ENDPOINT = ""
+AZURE_OPENAI_KEY = ""
+# version needs to match one of the dates on this page
+#  https://learn.microsoft.com/en-us/azure/ai-services/openai/reference
+AZURE_OPENAI_API_VERSION = ""
+AZURE_OPENAI_CHATGPT_DEPLOYMENT = ""
+
+# pricing (per 1000 tokens)
+# https://azure.microsoft.com/en-us/pricing/details/cognitive-services/openai-service/#pricing
+# https://openai.com/pricing
+
+# GPT3.5-turbo 4k
+# COST_PROMPT = 0.0015
+# COST_COMPLETION = 0.002
+
+# GPT3.5-turbo 16k
+COST_PROMPT = 0.003
+COST_COMPLETION = 0.004
